temporary fix for collapsed menu

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -145,7 +145,7 @@ a:focus, a:focus i {
 
 .nav-item {
     /* float: right; */
-    /* width: 100%; */
+    width: 100%;
     display: inline-block;
 }
 
